Fixed bug 22710, load and error events were not firing for images. I also changed the select event firing to use nsEvent instead of nsGUIEvent. r=joki.